--- a/my-telegram-bot/package.json
+++ b/my-telegram-bot/package.json
@@ -15,6 +15,7 @@
     "axios-cookiejar-support": "^6.0.5",
     "cors": "^2.8.6",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.3.1",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "fs": "^0.0.1-security",
